--- a/js/index.html
+++ b/js/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="INDEX, FOLLOW">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gyms | Yoga | Zumba | Dance | Aerobics | Martial Arts | Fit Zone</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" href="images/Fit Zone Logo 2.png.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -87,6 +87,6 @@
 
   
 
-  <script src="/js/index.js"></script> 
+  <script src="../js/index.js"></script> 
 </body>
 </html>
